feat(protected-export): obfuscate physics/motion-sync setting identities
Physics and motion-sync settings graduate from pin-only pass-through to
full identity obfuscation on the disposable copy: name and ID are
rewritten to GUID-hash tokens (Physics_/PhysicsId_, MotionSync_/
MotionSyncId_) under the same sha256 allocation loop and collision gates
as ArtMesh, while every behavior value — pendulum vertices, input/output
parameter references, normalization windows, enable flag, effective
forces — stays byte-pinned by the census signature.

Post-mutation census now requires identical settings GUID sets, planned
token identities, and unchanged behavior signatures; parameter GUID
references that cannot resolve against the model census fail closed at
bind. Staged physics3.json is validated semantically: the native writer
canonicalizes setting IDs positionally (PhysicsSetting<i>), so the check
asserts canonical-or-token IDs, obfuscated dictionary names, and
item-wise content equality under the writer's three-decimal rounding.

Host surface is exact-owner and verifier-gated: 48 new selectors per
record cover the settings name/ID reads+writes (motion-sync ID via the
pinned private _id field), the decomposed signature reads, and the
physics settings-set pin. All three exact JARs (5.2.03/5.3.02/5.3.03)
re-verify VERIFIED_STATIC; records, draft packs, manifest and repository
expectations re-pinned.

Managed queue evidence: physics-export + export/dirty-export/dialog/
glue-export/broad-structure all PASS on 5203/5302/5303.

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>